c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_struct_conflicts/union_shadowed_by_incomplete_struct.c

/* When one type declaration shadows another with the same tag (including a
 * union type shadowing struct type or vice versa) you can't specify the outer
 * tag
 * */

int main(void) {
    union tag {int a;};
    {
        struct tag;
        union tag *x; // illegal b/c "union tag" isn't visible
    }
    return 0;
}